# ComfyUI-Krea2Moodboard

./: README.md  __init__.py  identity.py  moodboard.py  prompt_tools.py  pyproject.toml  rebalance.py  rednode.py
web/: rednode_prompt.js
workflows/: Krea_Workflow_Public.json  krea2_identity_edit_fusion.json  krea2_moodboard_t2i.json  krea2_rednode_identity.json  krea2_rednode_style_transfer.json
